--- a/templates/pages/drivers.html
+++ b/templates/pages/drivers.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %} {% block content %}
+{% extends "base.html" %} 
+{% block content %}
 <div class="row">
   <h1>Drivers by year test</h1>
 </div>
