--- a/templates/pages/driversResult.html
+++ b/templates/pages/driversResult.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %} {% block content %}
+{% extends "base.html" %} 
+{% block content %}
 <div class="container">
   <div class="row">
     <h1>Drivers by year result</h1>
