--- a/templates/pages/driversResult.html
+++ b/templates/pages/driversResult.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %} 
 {% block content %}
+<div class="jumbotron">
 <div class="container">
   <div class="row">
     <h1>//DRIHOMAD</h1>
@@ -58,5 +59,5 @@
     </div>
   </div>
 </div>
-
+</div>
 {% endblock %}
