--- a/templates/pages/driversResult.html
+++ b/templates/pages/driversResult.html
@@ -15,7 +15,7 @@
       <th scope="col">Average placement</th>
       <th scope="col">Home placement</th>
       <th scope="col">Home advantage?</th>
-      <th scope="col">Detailed resulasdasdasdts</th>
+      <th scope="col">Detailed results</th>
     </tr>
   </thead>
   <tbody>
