--- a/templates/pages/driversResult.html
+++ b/templates/pages/driversResult.html
@@ -1,66 +1,63 @@
-{% extends "base.html" %} 
-{% block content %}
+{% extends "base.html" %} {% block content %}
 <div class="jumbotron">
-<div class="container">
-  <div class="row">
-    <h1>//DRIHOMAD</h1>
-    <h1>Drivers by year result</h1>
+  <div class="container">
+    <div class="row">
+      <h1>//DRIHOMAD</h1>
+      <h1>Drivers by year result</h1>
+    </div>
   </div>
-</div>
 
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th scope="col">Driver</th>
-      <th scope="col">Average placement</th>
-      <th scope="col">Home placement</th>
-      <th scope="col">Home advantage?</th>
-      <th scope="col">Detailed results</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for ind in result.index: %}
-    <tr>
-      <td>{{result['Driver'][ind]}}</td>
-      <td>{{result['Average placement'][ind]|round|int}}</td>
-      <td>{{result['Home placement'][ind]|round|int}}</td>
-      <td>
-      {% if result['Average placement'][ind]|round|int > result['Home placement'][ind]|round|int %}
-        Yes
-      {% else %}
-        No
-      {% endif %}
-      </td>
-      <td>
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModalCenter">
-          Show details
-        </button>
-      </td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
-{% for graph in graphs: %}
-  <img alt="driver graph" src='data:image/png;base64,{{ graph }}'/>
-  {% endfor %}
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th scope="col">Driver</th>
+        <th scope="col">Average placement</th>
+        <th scope="col">Home placement</th>
+        <th scope="col">Home advantage?</th>
+        <th scope="col">Detailed results</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for ind in result.index: %}
+      <tr>
+        <td>{{result['Driver'][ind]}}</td>
+        <td>{{result['Average placement'][ind]|round|int}}</td>
+        <td>{{result['Home placement'][ind]|round|int}}</td>
+        <td>{% if result['Average placement'][ind]|round|int > result['Home placement'][ind]|round|int %} Yes {% else %} No {% endif %}</td>
+        <td>
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#driver{{ind}}">Show details</button>
+        </td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+  {% for graph in graphs: %}
 
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <img alt="driver graph" src='data:image/png;base64,{{ graph }}'/>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+  <div
+    class="modal fade"
+    id="driver{{loop.index0}}"
+    tabindex="-1"
+    role="dialog"
+    aria-labelledby="exampleModalCenterTitle"
+    aria-hidden="true"
+  >
+    <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLongTitle">Driver placements for each race</h5>
+          <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <img alt="driver graph" src="data:image/png;base64,{{ graph }}" />
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
       </div>
     </div>
   </div>
-</div>
+  {% endfor %}
 </div>
 {% endblock %}
