Adjustments on Style

--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -1,5 +1,6 @@
 .jumbotron {
     margin: 10%;
+    margin-top: 10px;
 }
 
 .lead {
@@ -17,3 +18,20 @@ h1 {
     font-size: 22px;
     color: blueviolet;
 }
+
+#Video2 {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+  }
+
+  .content {
+    position: fixed;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    color: #f1f1f1;
+    width: 100%;
+    padding: 0px;
+  }
