--- a/templates/pages/drivers.html
+++ b/templates/pages/drivers.html
@@ -1,48 +1,39 @@
 {% extends "base.html" %}
 {% block content %}
 <div>
-<video autoplay muted loop id="Video2">
-  <source src="static\video\video.mp4" type="video/mp4">
-</video>
+  <video autoplay muted loop id="Video2">
+    <source src="static\video\video.mp4" type="video/mp4">
+  </video>
 
-<div class="content">
-<div class="jumbotron">
-<h1 class="display-4">//DRIHOMAD!</h1>
-<p class="lead">The unique data analyzer to discover if a formula one driver has a home advantage!</p>
-<hr class="my-4">
-<form action="{{ url_for('driversByYear') }}" method="GET">
-  <div class="mb-3">
-    <label for="cars">Choose a season:</label>
+  <div class="content">
+    <div class="jumbotron">
+      <h1 class="display-4">//DRIHOMAD!</h1>
+      <p class="lead">The unique data analyzer to discover if a formula one driver has a home advantage!</p>
+      <hr class="my-4">
+      <form action="{{ url_for('driversByYear') }}" method="GET">
+        <div class="mb-3">
+          <div class="row">
+            <div class="col-sm"></div>
+            <div class="col-sm">
+              <label for="cars">Choose a season:</label>
 
-    <select class="form-select" name="year" id="year">
-      {% for x in range(1950, 2022) %}
-        <option value="{{ x }}">{{ x }}</option>
-      {% endfor %}
-    </select>
+              <select class="form-select" name="year" id="year">
+                {% for x in range(1950, 2022) %}
+                <option value="{{ x }}">{{ x }}</option>
+                {% endfor %}
+              </select>
+            </div>
+            <div class="col-sm"></div>
+          </div>
+          <div class="row">
+            <div class="col-sm"></div>
+            <div class="col-sm"><input class="btn btn-primary mt-2" type="submit" value="Give me the results!" /></div>
+            <div class="col-sm"></div>
+          </div>
+        </div>
+
+      </form>
+    </div>
   </div>
-  <input class="btn btn-primary" type="submit" value="Submit" />
-</form>
 </div>
-</div>
-</div>
-
-<style>
-  #Video2 {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
-  }
-
-  .content {
-    position: fixed;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.5);
-    color: #f1f1f1;
-    width: 100%;
-    padding: 0px;
-  }
-
-</style>
 {% endblock %}
