Season year in result page

--- a/templates/pages/driversResult.html
+++ b/templates/pages/driversResult.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       <h1>//DRIHOMAD</h1>
-      <h1>Drivers by year result</h1>
+      <h1>All drivers with a home grandprix in season {{year}} </h1>
     </div>
   </div>
 
