reworked whole code

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -14,7 +14,7 @@
     in that season and if they had a better performance than their average season performance.</p>
     <div class="mb-3">
       <p class="lead">
-          <a class="btn btn-primary btn-lg" href="drivers" role="button">Lights out - And away we go!</a>
+          <a class="btn btn-primary btn-lg" href="singleSeason" role="button">Lights out - And away we go!</a>
       </p>
     </div>
   </div>
