--- a/templates/pages/selectSingleSeason.html
+++ b/templates/pages/selectSingleSeason.html
@@ -10,7 +10,7 @@
       <h1 class="display-4">//DRIHOMAD!</h1>
       <p class="lead">The unique data analyzer to discover if a formula one driver has a home advantage!</p>
       <hr class="my-4">
-      <form action="{{ url_for('driversByYear') }}" method="GET">
+      <form action="{{ url_for('calculateSingleSeason') }}" method="GET">
         <div class="mb-3">
           <div class="row">
             <div class="col-sm"></div>
@@ -18,8 +18,8 @@
               <label for="cars">Choose a season:</label>
 
               <select class="form-select" name="year" id="year">
-                {% for x in range(1950, 2022) %}
-                <option value="{{ x }}">{{ x }}</option>
+                {% for season in seasons[:-1] %}
+                <option value="{{ season['season'] }}">{{ season['season'] }}</option>
                 {% endfor %}
               </select>
             </div>
