--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -8,14 +8,15 @@
 
   <div class="content">
     <h1 class="display-4">Welcome to //DRIHOMAD!</h1>
-  <p class="lead">The unique data analyzer to discover if a formula one driver has a home advantage!</p>
+  <p class="lead">The unique data analyzer to discover if a Formula 1 driver has a home advantage!</p>
   <hr class="my-4">
-  <p style="text-align: center;">By defining a season it will show you all the drivers who had a home grand-prix
-    in that season and if they had a better performance than their average season performance.</p>
     <div class="mb-3">
       <p class="lead">
-          <a class="btn btn-primary btn-lg" href="singleSeason" role="button">Lights out - And away we go!</a>
+          <a class="btn btn-secondary btn-lg" href="singleSeason" role="button">Calculate results for a single season</a>
       </p>
+      <p class="lead">
+        <a class="btn btn-primary btn-lg" href="allSeasons" role="button">Calculate home advantage for all Formula 1 seasons</a>
+    </p>
     </div>
   </div>
 
