--- a/templates/pages/selectSingleSeason.html
+++ b/templates/pages/selectSingleSeason.html
@@ -10,6 +10,8 @@
       <h1 class="display-4">//DRIHOMAD!</h1>
       <p class="lead">The unique data analyzer to discover if a formula one driver has a home advantage!</p>
       <hr class="my-4">
+      <p style="text-align: center;">By defining a season it will show you all the drivers who had a home grand-prix
+        in that season and if they had a better performance than their average season performance.</p>
       <form action="{{ url_for('calculateSingleSeason') }}" method="GET">
         <div class="mb-3">
           <div class="row">
