--- a/templates/pages/singleSeasonResult.html
+++ b/templates/pages/singleSeasonResult.html
@@ -1,4 +1,22 @@
 {% extends "base.html" %} {% block content %}
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="/">Back to the gridline</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="../singleSeason">Calculate single season</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="../allSeasons">Calculate all seasons</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
 <div class="jumbotron">
   <div class="container">
     <div class="row">
