Button label changed

--- a/templates/pages/selectSingleSeason.html
+++ b/templates/pages/selectSingleSeason.html
@@ -29,7 +29,7 @@
           </div>
           <div class="row">
             <div class="col-sm"></div>
-            <div class="col-sm"><input class="btn btn-primary mt-2" type="submit" value="Give me the results!" /></div>
+            <div class="col-sm"><input class="btn btn-primary mt-2" type="submit" value="Lights out - and away we go!" /></div>
             <div class="col-sm"></div>
           </div>
         </div>
