Corrections on graphs

--- a/templates/pages/allSeasonsResult.html
+++ b/templates/pages/allSeasonsResult.html
@@ -26,10 +26,10 @@
   <div class="container">
     <div class="row md-4">
       <h2>Explanation</h2>
-      <p>The home advantage is calculated with a ratio. The ratio consists of all drivers with a home grandprix in a season<br />
-        The ratio is calculated by comparing the drivers who had a better placement in their home grandprix to all the drivers with a home grandprix in that season.</p>
+      <p>The home advantage is calculated with a ratio. The ratio is calculated by comparing every drivers average placement of a season to the placement of his home grandprix.
+        <br />We then calculate the percentage of drivers who performed better at home.</p>
       <p>This means in short: <br />
-         Home advantage ratio = Total drivers with home grandprix in one season / Drivers with a better placement at home in that season.</p>
+         Home advantage ratio = All drivers with a better placement at home in one season / Total drivers with home grandprix in that season.</p>
     </div>
     <div class="row md-4">
       <h2>Statistics:</h2>
@@ -48,8 +48,8 @@
       <h3>Explanation of graph</h3>
       <ul>
         <li><b>Blue line:</b> Home advantage ratio in one season</li>
-        <li><b>Red line:</b> 50% Home advantage treshold</li>
-        <li><b>Green line:</b> Average home advantage ratio</li>
+        <li><b>Red line:</b> 50% Home advantage threshold</li>
+        <li><b>Green line:</b> Average home advantage ratio of all seasons</li>
       </ul>
     </div>
   </div>
